edit info product

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <div class="overlay"></div>
                     <div class="form-submit__wrapper">
                     </div>
-                    <h2 class="content__heading">Tất cả sản phẩm</h2>
+                    <h2 class="content__heading text-center">Tất cả sản phẩm</h2>
                     <div class="content">
                         <div class="product-list">
                             
