update responsive and date

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="grid wide">
                 <div class="header-wrapper">
                     <div class="header__logo">
-                        <img src="./assets/image/logopage.png" alt="" class="logo__img">
+                        <img src="./assets/image/logo.jpg" alt="" class="logo__img">
                     </div>
                     <div class="header__cart">
                         <i class="far fa-shopping-cart header__cart--icon"></i>
